# moderna_type_check

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  auto_compile.sh  build.py  dockerfile.export  setup.py
assets/: type_a.json  type_b.json
js/: moderna_type_check_js.d.ts  moderna_type_check_js.js  moderna_type_check_js.wasm
moderna/type_check/: __init__.py  __init__.pyi  tests.py
src/: constraints.ccm  engine.cc  engine.ccm  main_types.cc  main_types.ccm  matcher.cc  matcher.ccm  parser.cc  type_check.cc  type_check.ccm  types.cc  types.ccm
test-lib/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
tests/: engine.cc  parser.cc  parser.cpp  tests.cpp  tests.py  type_check.cc
wrappers/: python.cpp  wasm.cpp
wrappers/graph_check/: __init__.py
